--- a/src/Soenneker.Atomics.NullableBools.csproj
+++ b/src/Soenneker.Atomics.NullableBools.csproj
@@ -39,4 +39,8 @@
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <PackageReference Include="Soenneker.Atomics.Ints" Version="4.0.2" />
+    </ItemGroup>
 </Project>
