--- a/src/Soenneker.Atomics.NullableBools.csproj
+++ b/src/Soenneker.Atomics.NullableBools.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.Atomics.NullableBools</AssemblyName>
         <PackageId>Soenneker.Atomics.NullableBools</PackageId>
         <PackageTags>atomics nullablebools atomic bool interlocked volatile atomicnullablebool util csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
